fix scrollbar from showing in chrome on windows
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@21097 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk-filter-param.css
+++ b/View/webapp/wdk/css/wdk-filter-param.css
@@ -195,8 +195,10 @@
 /* Prevent checkbox cell of table from having scrollbar */
 .filter-param .membership-filter .MesaComponent th.SelectionCell,
 .filter-param .membership-filter .MesaComponent td.SelectionCell {
-  width: 20px;
+  width: 22px;
   padding: 4px;
+  text-align: center;
+  overflow: visible;
 }
 .filter-param .membership-filter .HeadingRow {
   border-bottom: 1px solid #ccc;
